--- a/SimpleRestApi.EndPoint/SimpleRestApi.EndPoint.csproj
+++ b/SimpleRestApi.EndPoint/SimpleRestApi.EndPoint.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
